--- a/src/main/resources/templates/listofEmployee.html
+++ b/src/main/resources/templates/listofEmployee.html
@@ -24,7 +24,9 @@
             <td th:text="${employee.firstname}"></td>
             <td th:text="${employee.lastname}"></td>
             <td th:text="${employee.email}"></td>
-            <td> <a th:href="@{/update(empId=${employee.id})}">Update</a> </td>
+            <td> <a th:href="@{'/update/' + ${employee.id}}">Update</a>
+                <a th:href="@{'/delete/' + ${employee.id}}"
+                onclick="if(!(confirm('Are you sure you want to delete this employee?'))) return false">Delete</a> </td>
 
         </tr>
         </tbody>
